# serializer version: 1
# name: test_sensors[sensor.schwechat_active_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_active_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active warnings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active warnings',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_warnings',
    'unique_id': '30740-active_warnings',
    'unit_of_measurement': 'warnings',
  })
# ---
# name: test_sensors[sensor.schwechat_active_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Active warnings',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'warnings',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_active_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_advance_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_advance_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Advance warning level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Advance warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'advance_warning_level',
    'unique_id': '30740-advance_warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_advance_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Advance warning level',
      'municipality': 'Schwechat',
      'warning_1': dict({
        'change_id': 2,
        'color': 'yellow',
        'course_id': 1,
        'description': 'Yellow rain warning from Tue, 28.03.2023 08:00 until Tue, 28.03.2023 18:00',
        'end': '2023-03-28T16:00:00+00:00',
        'impacts': '* Local flooding is possible.',
        'instruction': '* Avoid underpasses and flooded roads!',
        'level': 1,
        'meteo_text': 'Persistent rain with amounts between 40 and 60 mm.',
        'name': 'rain',
        'start': '2023-03-28T06:00:00+00:00',
        'type': 2,
        'update_reason': '',
        'warning_id': 4150,
      }),
      'warning_count': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_advance_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_current_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_current_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current warning level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_warning_level',
    'unique_id': '30740-current_warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_current_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Current warning level',
      'municipality': 'Schwechat',
      'warning_1': dict({
        'change_id': 6,
        'color': 'orange',
        'course_id': 2,
        'description': 'Orange wind warning from Mon, 27.03.2023 08:00 until Mon, 27.03.2023 18:00',
        'end': '2023-03-27T16:00:00+00:00',
        'impacts': '* Branches may fall and objects may be thrown around.',
        'instruction': '* Be careful in forests, parks and avenues!',
        'level': 2,
        'meteo_text': 'Strong northwest winds with gusts between 60 and 80 km/h.',
        'name': 'storm',
        'start': '2023-03-27T06:00:00+00:00',
        'type': 1,
        'update_reason': '',
        'warning_id': 4149,
      }),
      'warning_count': 1,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_current_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Warning level',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'warning_level',
    'unique_id': '30740-warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Warning level',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'orange',
  })
# ---
